# Closeloop

./: .gitignore  README.md  app.py  pyproject.toml
docs/architecture/: component-diagram.mmd  system-architecture.md  workflow-sequence.mmd
src/closeloop/: __init__.py  logging_layer.py  orchestrator.py  state.py
src/closeloop/agents/: __init__.py  monitoring_module.py  outreach_agent.py  recovery_agent.py  research_agent.py  risk_detection_agent.py
tests/: test_agents_pipeline.py  test_phase1_structure.py
